1.7.11
------
(RB=130026)
Change build scripts to work with Gradle 1.3.

1.7.10
------
(RB=129645)
Add methods for common uses for ResponseFuture.getResponseEntity and RestClient.sendRequest(RequestBuilde ...)
client.sendRequest(builder.build()).getResponse().getEntity() can be simplified as follow to
client.sendRequest(builder).getResponseEntity();

1.7.9
-----
(RB=129334)
add try/catch to PropertyEvent runnables, add UnhandledExceptionHandler to NamedThreadFactory

(RB=129193)
fix a bug where the LoadBalancer config gets overwritten by empty map and causes D2 Strategy
to not instantiate properly

(RB=123406)
Change to allow clients to request data in pson-encoded format (and interpet pson-encoded data),
and for servers to be able to send pson-encoded responses.

Clients can signify that a response should be in pson format by sending the request with the
header "Accept-Type : application/x-pson".  The server will then encode the result in pson and
send it back with the header "Content-Type : application/x-pson". If the client recieves a
response with this header it will decode it with the pson codec.
    
Some headers will now work a bit differently:
Content-Type headers will no longer be sent with responses unless there is actual body content
to encode.  This change was made primarily to simplify picking the right header.  There's no
point in trying to figure out the right content-type header to send back if there isn't
actually any content to send.
Accept-Type headers can now be sent with requests.  The default client won't send Accept-Type
headers (same as the old code), but users can use the new RestClient constructor to create a
client that will send Accept-Type headers.  Right now there are four basic options for
Accept-Type headers:
 - no header: server will send back result as application/json.  This is required for backwards
   compatibility.
 - application/json highest quality in header: server will send back result as application/json