@@ -14,6 +14,7 @@ dependencies {
   compile externalDependency.jacksonCoreAsl
   compile externalDependency.jacksonMapperAsl
   compile externalDependency.parseq
+  compile externalDependency.servletApi
   testCompile project(path: ':generator-test', configuration: 'testArtifacts')
   testCompile externalDependency.googleCollections
   testCompile externalDependency.testng
