@@ -3,6 +3,9 @@
 (RB=130026)
 Change build scripts to work with Gradle 1.3.
 
+(RB=130083)
+Add RestliServlet to provide developers with a simple way to build a war using rest.li.
+
 1.7.10
 ------
 (RB=129645)
